--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="row">
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/team-1.jpg" alt="">
+              <img src="assets/img/team/mentor.jpeg" alt="">
               <h4>Mentor</h4>
               <div class="col-lg-3 cta-btn-container text-center">
                 <a class="cta-btn align-middle" href="#">Sign up / Sign In</a>
@@ -179,7 +179,7 @@
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/team-2.jpg" alt="">
+              <img src="assets/img/team/mentee.jpeg" alt="">
               <h4>Mentee</h4>
               <div class="col-lg-3 cta-btn-container text-center">
                 <a class="cta-btn align-middle" href="#">Sign up / Sign In</a>
