Changed mentee and mission statement picture.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/hispanic-college-students.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
@@ -179,7 +179,7 @@
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/mentee.jpeg" alt="">
+              <img src="assets/img/team/mentee-1.jpeg" alt="">
               <h4>Mentee</h4>
               <div class="col-lg-3 cta-btn-container text-center">
                 <a class="cta-btn align-middle" href="#">Sign up / Sign In</a>
