--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-7.jpeg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <h2 class="animate__animated animate__fadeInDown">Do you want to succeed in college?</h2>
+              <p class="animate__animated animate__fadeInUp">Having a mentor can have a huge, positive impact in your college experience.</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
@@ -100,8 +100,8 @@
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-8.jpeg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <h2 class="animate__animated animate__fadeInDown">Do you want to help someone to succeed in college?</h2>
+              <p class="animate__animated animate__fadeInUp">Become a mentor! You can share your expertise and experiences to have a positive impact on some other person's life. </p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
@@ -128,7 +128,7 @@
 
         <div class="section-title">
           <h2>Mission Statement</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Our mission is to help Hispanic people to succeed in college.</p>
         </div>
 
         <div class="row">
