When you click the 'Read More' button link in slides 2 and 3, you will be taken to the mentor/mentee sign up section.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Do you want to succeed in college?</h2>
               <p class="animate__animated animate__fadeInUp">Having a mentor can have a huge, positive impact in your college experience.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <a href="#team" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
         </div>
@@ -102,7 +102,7 @@
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Do you want to help someone to succeed in college?</h2>
               <p class="animate__animated animate__fadeInUp">Become a mentor! You can share your expertise and experiences to have a positive impact on some other person's life. </p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <a href="#team" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
         </div>
