Added mission statement.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Hispanics who College</span></h2>
               <p class="animate__animated animate__fadeInUp">Connect to other people within your community and advance your or their education.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <a href="#mission-statement" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
         </div>
@@ -122,13 +122,13 @@
 
   <main id="main">
 
-    <!-- ======= About Us Section ======= -->
-    <section id="about" class="about">
+    <!-- ======= Mission Statement Section ======= -->
+    <section id="mission-statement" class="about">
       <div class="container">
 
         <div class="section-title">
           <h2>Mission Statement</h2>
-          <p>Our mission is to help Hispanic people to succeed in college.</p>
+          <p>Our mission is to help Hispanic people to succeed in college by connecting with other members of the Hispanic community.</p>
         </div>
 
         <div class="row">
@@ -136,34 +136,40 @@
             <img src="assets/img/hispanic-college-students.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Let us succeed together!</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Problem
             </p>
             <ul>
-              <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circled"></i> Immigrants accounted for 13.7% of the United States population in 2020. Even though the population of Hispanic people continues growing, the retention and graduation rates across all levels of education among Hispanics are low when compared to their non-Hispanic counterparts.</li>
+              <li><i class="bi bi-check-circled"></i> 1 in 10 Hispanic students who start elementary school graduate from college.</li>
             </ul>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+            <p class="fst-italic">
+                Factors
             </p>
+            <ul>
+                <li><i class="bi bi-check-circled"></i> Several factors are causing Hispanics in the United States’ educational system to drop out and not continue studies until they achieve a degree in higher education.</li>
+                <li><i class="bi bi-check-circled"></i> Not being proficient in English, lack of information about financial aid, lack of guide to navigate American culture, and computer tools that are not localized in the native language are some of the challenges that Hispanic people face.</li>
+            </ul>
+            <p class="fst-italic">
+                Our Solution
+            </p>
+            <ul>
+                <li><i class="bi bi-check-circled"></i> We believe in the power that the Hispanic community has. </li>
+                <li><i class="bi bi-check-circled"></i> We aim to connect Hispanics that want to advance their education to other Hispanics that can advise and help them to do so.</li>
+            </ul>
           </div>
         </div>
 
       </div>
-    </section><!-- End About Us Section -->
+    </section><!-- End Mission Statement Section -->
 
-    <!-- ======= Team Section ======= -->
+    <!-- ======= Mentor / Mentee Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container">
 
         <div class="section-title">
             <h2>Join Us</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -190,7 +196,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section><!-- End Mentor / Mentee Section -->
 
   </main><!-- End #main -->
 
