Formatted the mission statement section.

--- a/index.html
+++ b/index.html
@@ -141,22 +141,14 @@
               Problem
             </p>
             <ul>
-              <li><i class="bi bi-check-circled"></i> Immigrants accounted for 13.7% of the United States population in 2020. Even though the population of Hispanic people continues growing, the retention and graduation rates across all levels of education among Hispanics are low when compared to their non-Hispanic counterparts.</li>
-              <li><i class="bi bi-check-circled"></i> 1 in 10 Hispanic students who start elementary school graduate from college.</li>
-            </ul>
-            <p class="fst-italic">
-                Factors
-            </p>
-            <ul>
-                <li><i class="bi bi-check-circled"></i> Several factors are causing Hispanics in the United States’ educational system to drop out and not continue studies until they achieve a degree in higher education.</li>
-                <li><i class="bi bi-check-circled"></i> Not being proficient in English, lack of information about financial aid, lack of guide to navigate American culture, and computer tools that are not localized in the native language are some of the challenges that Hispanic people face.</li>
+              <li><i class="bi bi-check-circled"></i> Immigrants accounted for 13.7% of the United States population in 2020. Even though the population of Hispanic people continues growing, the retention and graduation rates across all levels of education among Hispanics are low when compared to their non-Hispanic counterparts. For example, only 1 in 10 Hispanic students who start elementary school graduate from college.</li>
+              <li><i class="bi bi-check-circled"></i> Several factors are causing Hispanics in the United States’ educational system to drop out and not continue their studies. Not being proficient in English, lack of information about financial aid, lack of guide to navigate American culture, and computer tools that are not localized in the native language are some of the challenges that Hispanic people face.</li>
             </ul>
             <p class="fst-italic">
                 Our Solution
             </p>
             <ul>
-                <li><i class="bi bi-check-circled"></i> We believe in the power that the Hispanic community has. </li>
-                <li><i class="bi bi-check-circled"></i> We aim to connect Hispanics that want to advance their education to other Hispanics that can advise and help them to do so.</li>
+                <li><i class="bi bi-check-circled"></i> We believe in the power that the Hispanic community has. We aim to connect Hispanics that want to advance their education to other Hispanics that can advise and help them to do so.</li>
             </ul>
           </div>
         </div>
