--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Mentors</a></li>
           <li><a class="nav-link scrollto" href="#services">Share your Story</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Report</a></li>
+          <li><a class="nav-link scrollto " href="report.html">Report</a></li>
           <li class="dropdown"><a href="#"><span>Language</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">English</a></li>
