Added backbone for contact page. Clicking 'Home' menu items take user to the Home page.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Mentors</a></li>
           <li><a class="nav-link scrollto" href="#services">Share your Story</a></li>
           <li><a class="nav-link scrollto " href="report.html">Report</a></li>
@@ -57,7 +57,7 @@
               <li><a href="#">Portuguese</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
           <li><a class="getstarted scrollto" href="signup-signin.html">Sign Up / Sign In</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
