--- a/report.html
+++ b/report.html
@@ -57,7 +57,7 @@
               <li><a href="#">Portuguese</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
           <li><a class="getstarted scrollto" href="signup-signin.html">Sign Up / Sign In</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -86,7 +86,24 @@
                 <input type="text" class="form-control" name="subject" id="subject" required>
               </div>
               <div class="form-group mt-3">
-                <label for="name">Please describe the violation(s) in detail</label>
+                <label for="name">Reasons</label>
+                <ul>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="conductCodeViolationCheckBox" />
+                    <label class="form-check-label" for="conductCodeViolationCheckBox">Code of conduct violation</label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="unmetExpectationsCheckBox" />
+                    <label class="form-check-label" for="unmetExpectationsCheckBox">Expectations not met</label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="otherViolationCheckBox" />
+                    <label class="form-check-label" for="otherViolationCheckBox">Other (explain)</label>
+                  </div>
+                </ul>
+              </div>
+              <div class="form-group mt-3">
+                <label for="name">Please describe the violation(s) in detail.</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
               <div class="my-3">
