--- a/signup-signin.html
+++ b/signup-signin.html
@@ -48,7 +48,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="portfolio-details.html">Mentors</a></li>
-          <li><a class="nav-link scrollto" href="#services">Share your Story</a></li>
+          <li><a class="nav-link scrollto" href="inner-page.html">Share your Story</a></li>
           <li><a class="nav-link scrollto " href="report.html">Report</a></li>
           <li class="dropdown"><a href="#"><span>Language</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
