--- a/signup-signin.html
+++ b/signup-signin.html
@@ -74,7 +74,7 @@
 
         <div class="section-title">
           <h2>Sign Up / Sign In</h2>
-          <p>Create a new account or login in your account.</p>
+          <p>Create a new account or login to your account.</p>
         </div>
 
         <div class="row">
