--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">Mentors</a></li>
-          <li><a class="nav-link scrollto" href="#services">Share your Story</a></li>
+          <li><a class="nav-link scrollto" href="mentors.html">Mentors</a></li>
+          <li><a class="nav-link scrollto" href="shareyourstory.html">Share your Story</a></li>
           <li><a class="nav-link scrollto " href="report.html">Report</a></li>
           <li class="dropdown"><a href="#"><span>Language</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
