--- a/shareyourstory.html
+++ b/shareyourstory.html
@@ -47,8 +47,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="portfolio-details.html">Mentors</a></li>
-          <li><a class="nav-link scrollto" href="inner-page.html">Share your Story</a></li>
+          <li><a class="nav-link scrollto" href="mentors.html">Mentors</a></li>
+          <li><a class="nav-link scrollto" href="shareyourstory.html">Share your Story</a></li>
           <li><a class="nav-link scrollto " href="report.html">Report</a></li>
           <li class="dropdown"><a href="#"><span>Language</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -73,7 +73,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Share your Story</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
