--- a/signup-signin.html
+++ b/signup-signin.html
@@ -84,18 +84,18 @@
           <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
             <li class="nav-item" role="presentation">
               <a class="nav-link active" id="tab-login" data-mdb-toggle="pill" href="#pills-login" role="tab"
-                aria-controls="pills-login" aria-selected="false">Login</a>
+                aria-controls="pills-login" aria-selected="true">Login</a>
             </li>
             <li class="nav-item" role="presentation">
               <a class="nav-link" id="tab-register" data-mdb-toggle="pill" href="#pills-register" role="tab"
-                aria-controls="pills-register" aria-selected="true">Register</a>
+                aria-controls="pills-register" aria-selected="false">Register</a>
             </li>
           </ul>
           <!-- Pills navs -->
 
           <!-- Pills content -->
           <div class="tab-content">
-            <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
+            <div class="tab-pane fade" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
               <form>
 
                 <!-- Email input -->
@@ -135,7 +135,7 @@
                 </div>
               </form>
             </div>
-            <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
+            <div class="tab-pane fade show active" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
               <form>
 
                 <!-- Name input -->
