--- a/signup-signin.html
+++ b/signup-signin.html
@@ -156,6 +156,21 @@
                   <label class="form-label" for="registerEmail">Email</label>
                 </div>
 
+                <!-- Phone Number input -->
+                <div class="form-outline mb-4">
+                  <input type="tel" id="registerPhoneNumber" class="form-control" placeholder="123-456-789" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}">
+                  <label class="form-label" for="registerPhoneNumber">Phone Number</label>
+                </div>
+
+                <!-- Preferred Contact Method input -->
+                <div class="form-outline mb-4">
+                  <select id="registerPreferredContactMethod" name="registerPreferredContactMethod">
+                    <option value="volvo">Email</option>
+                    <option value="saab">Phone Number</option>
+                  </select>
+                  <label class="form-label" for="registerPreferredContactMethod">Preferred Contact Method</label>
+                </div>
+
                 <!-- Password input -->
                 <div class="form-outline mb-4">
                   <input type="password" id="registerPassword" class="form-control" />
@@ -166,6 +181,12 @@
                 <div class="form-outline mb-4">
                   <input type="password" id="registerRepeatPassword" class="form-control" />
                   <label class="form-label" for="registerRepeatPassword">Repeat password</label>
+                </div>
+
+                <!-- Areas of Expertise input -->
+                <div class="form-outline mb-4">
+                  <input type="text" id="registerAreasOfExpertise" class="form-control" placeholder="Describe in which areas you will provide expertise (e.g., helping with FAFSA application, coaching for interviews, etc.)" />
+                  <label class="form-label" for="registerAreasOfExpertise">Areas of expertise</label>
                 </div>
 
                 <!-- Checkbox -->
