Created different sign up/sign in pages for mentors and mentees.

--- a/signup-signin-mentor.html
+++ b/signup-signin-mentor.html
@@ -186,7 +186,7 @@
                 <!-- Areas of Expertise input -->
                 <div class="form-outline mb-4">
                   <input type="text" id="registerAreasOfExpertise" class="form-control" placeholder="Describe in which areas you will provide expertise (e.g., helping with FAFSA application, coaching for interviews, etc.)" />
-                  <label class="form-label" for="registerAreasOfExpertise">Areas of expertise</label>
+                  <label class="form-label" for="registerAreasOfExpertise">Areas of Expertise</label>
                 </div>
 
                 <!-- Checkbox -->
