--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <img src="assets/img/team/mentor.jpeg" alt="">
               <h4>Mentor</h4>
               <div class="col-lg-3 cta-btn-container text-center">
-                <a class="cta-btn align-middle" href="signup-signin.html">Sign up / Sign In</a>
+                <a class="cta-btn align-middle" href="signup-signin-mentor.html">Sign up / Sign In</a>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
               <img src="assets/img/team/mentee.jpeg" alt="">
               <h4>Mentee</h4>
               <div class="col-lg-3 cta-btn-container text-center">
-                <a class="cta-btn align-middle" href="signup-signin.html">Sign up / Sign In</a>
+                <a class="cta-btn align-middle" href="signup-signin-mentee.html">Sign up / Sign In</a>
               </div>
             </div>
           </div>
