--- a/report.html
+++ b/report.html
@@ -58,7 +58,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="signup-signin.html">Sign Up / Sign In</a></li>
+          <li><a class="getstarted scrollto" href="signin.html">Sign In</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
