Removing role and preferred contact method fields.

--- a/public/signin.html
+++ b/public/signin.html
@@ -110,7 +110,7 @@
             </div>
 
             <!-- Submit button -->
-            <button type="submit" id="signin" name="signin" class="btn btn-primary btn-block mb-4">Sign in</button>
+            <button type="submit" id="signIn" name="signIn" class="btn btn-primary btn-block mb-4">Sign in</button>
 
             <!-- Sign Up buttons -->
             <div class="text-center">
