--- a/signup.html
+++ b/signup.html
@@ -107,13 +107,13 @@
             </div>
 
             <!-- Preferred Contact Method input -->
-            <div class="form-outline mb-4">
+            <!-- <div class="form-outline mb-4">
               <select id="registerPreferredContactMethod" name="registerPreferredContactMethod">
                 <option value="email">Email</option>
                 <option value="phoneNumber">Phone Number</option>
               </select>
               <label class="form-label" for="registerPreferredContactMethod">Preferred Contact Method</label>
-            </div>
+            </div> -->
 
             <!-- Password input -->
             <div class="form-outline mb-4">
@@ -122,13 +122,13 @@
             </div>
 
             <!-- Role input -->
-            <div class="form-outline mb-4">
+            <!-- <div class="form-outline mb-4">
               <select id="registerRole" name="registerRole">
                 <option value="mentor">Mentor</option>
                 <option value="mentee">Mentee</option>
               </select>
               <label class="form-label" for="registerRole">Role</label>
-            </div>
+            </div> -->
 
             <!-- Areas input -->
             <div class="form-outline mb-4">
@@ -186,7 +186,75 @@
   <script src="assets/js/main.js"></script>
 
    <!-- Firebase JS Files -->
-   <script src="assets/js/authenticate.js"></script>
+   <!-- <script src="assets/js/authenticate.js"></script> -->
+
+   <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+    import { getDatabase, set, ref } from 'https://www.gstatic.com/firebasejs/9.14.0/firebase-database.js' 
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
+
+    // TODO: Replace the following with your app's Firebase project configuration
+    // See: https://firebase.google.com/docs/web/learn-more#config-object
+
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+        apiKey: "AIzaSyBhqIalP3-K-gXgQNewWVQ5CVKDMRfsF-E",
+        authDomain: "hispanicswhocollege-e3c8b.firebaseapp.com",
+        databaseURL: "https://hispanicswhocollege-e3c8b-default-rtdb.firebaseio.com",
+        projectId: "hispanicswhocollege-e3c8b",
+        storageBucket: "hispanicswhocollege-e3c8b.appspot.com",
+        messagingSenderId: "179729519037",
+        appId: "1:179729519037:web:368abaf78714e3d929c2d4",
+        measurementId: "G-FK5L5DPBC2"
+      };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const database = getDatabase(app);
+
+
+    // Initialize Firebase Authentication and get a reference to the service
+    const auth = getAuth(app);
+
+    signUp.addEventListener('click', (e)=>{
+        alert('I am here');
+
+        var username = document.getElementById('registerUsername').value;
+        var email = document.getElementById('registerEmail').value;
+        var password = document.getElementById('registerPassword').value;
+        // var name = document.getElementById('registerName').value;
+        // var phoneNumber = document.getElementById('registerPhoneNumber').value;
+        // var preferredContactMethod = document.getElementById('registerPreferredContactMethod').value;
+        // var role = document.getElementById('registerRole').value;
+        // var areas = document.getElementById('registerAreas').value;
+
+        createUserWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+                // Signed in 
+                const user = userCredential.user;
+
+                set(ref(database, 'users/' + user.uid),{
+                    //name: name,
+                    username: username,
+                    email: email
+                    // phoneNumber: phoneNumber,
+                    // preferredContactMethod: preferredContactMethod,
+                    // role: role,
+                    // areas: areas
+                });
+                
+                alert('user created');
+            })
+            .catch((error) => {
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                
+                alert(errorMessage);
+            });
+
+    });
+
+   </script>
 
 </body>
 
