--- a/signup.html
+++ b/signup.html
@@ -107,13 +107,13 @@
             </div>
 
             <!-- Preferred Contact Method input -->
-            <!-- <div class="form-outline mb-4">
+            <div class="form-outline mb-4">
               <select id="registerPreferredContactMethod" name="registerPreferredContactMethod">
                 <option value="email">Email</option>
                 <option value="phoneNumber">Phone Number</option>
               </select>
               <label class="form-label" for="registerPreferredContactMethod">Preferred Contact Method</label>
-            </div> -->
+            </div>
 
             <!-- Password input -->
             <div class="form-outline mb-4">
@@ -122,13 +122,13 @@
             </div>
 
             <!-- Role input -->
-            <!-- <div class="form-outline mb-4">
+            <div class="form-outline mb-4">
               <select id="registerRole" name="registerRole">
                 <option value="mentor">Mentor</option>
                 <option value="mentee">Mentee</option>
               </select>
               <label class="form-label" for="registerRole">Role</label>
-            </div> -->
+            </div>
 
             <!-- Areas input -->
             <div class="form-outline mb-4">
@@ -212,36 +212,34 @@
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
 
-
     // Initialize Firebase Authentication and get a reference to the service
     const auth = getAuth(app);
 
+      // Sign up user.
     signUp.addEventListener('click', (e)=>{
-        alert('I am here');
-
         var username = document.getElementById('registerUsername').value;
         var email = document.getElementById('registerEmail').value;
         var password = document.getElementById('registerPassword').value;
-        // var name = document.getElementById('registerName').value;
-        // var phoneNumber = document.getElementById('registerPhoneNumber').value;
-        // var preferredContactMethod = document.getElementById('registerPreferredContactMethod').value;
-        // var role = document.getElementById('registerRole').value;
-        // var areas = document.getElementById('registerAreas').value;
+        var name = document.getElementById('registerName').value;
+        var phoneNumber = document.getElementById('registerPhoneNumber').value;
+        //var preferredContactMethod = document.getElementById('registerPreferredContactMethod').value;
+        //var role = document.getElementById('registerRole').value;
+        var areas = document.getElementById('registerAreas').value;
 
         createUserWithEmailAndPassword(auth, email, password)
             .then((userCredential) => {
                 // Signed in 
                 const user = userCredential.user;
 
-                set(ref(database, 'users/' + user.uid),{
-                    //name: name,
+                set(ref(database, 'users/' + user.uid), {
+                    name: name,
+                    email: email,
                     username: username,
-                    email: email
-                    // phoneNumber: phoneNumber,
-                    // preferredContactMethod: preferredContactMethod,
-                    // role: role,
-                    // areas: areas
-                });
+                    phoneNumber: phoneNumber,
+                    //preferredContactMethod: preferredContactMethod,
+                    //role: role,
+                    areas: areas
+                  });
                 
                 alert('user created');
             })
