--- a/public/index.html
+++ b/public/index.html
@@ -47,17 +47,15 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="mentors.html">Mentors</a></li>
-          <li><a class="nav-link scrollto" href="shareyourstory.html">Share your Story</a></li>
+          <li><a class="nav-link scrollto" href="communitymembers.html">Community Members</a></li>
           <li><a class="nav-link scrollto " href="report.html">Report</a></li>
           <li class="dropdown"><a href="#"><span>Language</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">English</a></li>
               <li><a href="#">Spanish</a></li>
-              <li><a href="#">Portuguese</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="signin.html">Sign In</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
