--- a/shareyourstory.html
+++ b/shareyourstory.html
@@ -47,7 +47,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="mentors.html">Mentors</a></li>
+          <li><a class="nav-link scrollto" href="communitymembers.html">Community Members</a></li>
           <li><a class="nav-link scrollto" href="shareyourstory.html">Share your Story</a></li>
           <li><a class="nav-link scrollto " href="report.html">Report</a></li>
           <li class="dropdown"><a href="#"><span>Language</span> <i class="bi bi-chevron-down"></i></a>
