Added sign in functionality.

--- a/public/signup.html
+++ b/public/signup.html
@@ -180,9 +180,9 @@
   <script src="assets/js/main.js"></script>
 
    <!-- Firebase JS Files -->
-   <!-- <script src="assets/js/authenticate.js"></script> -->
+   !<script src="assets/js/authenticate.js"></script>
 
-   <script type="module">
+   <!--script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
     import { getDatabase, set, ref } from 'https://www.gstatic.com/firebasejs/9.14.0/firebase-database.js' 
     import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
@@ -235,7 +235,7 @@
                     areas: areas
                   });
                 
-                // Redirect to the mentors page.
+                // Redirect to the community members page.
                 window.location.href = "communitymembers.html";
             })
             .catch((error) => {
@@ -247,7 +247,7 @@
 
     });
 
-   </script>
+   </script-->
 
 </body>
 
