--- a/public/signin.html
+++ b/public/signin.html
@@ -78,43 +78,41 @@
         <div class="row">
           <!--Reused 'Login-register' form from https://mdbootstrap.com/docs/standard/extended/login/# to create the sign-up / sign in form.-->
           
-          <form>
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-              <input type="email" id="loginName" class="form-control" />
-              <label class="form-label" for="loginName">Email or username</label>
-            </div>
+          <!-- Email input -->
+          <div class="form-outline mb-4">
+            <input type="email" id="loginName" class="form-control" />
+            <label class="form-label" for="loginName">Email or username</label>
+          </div>
 
-            <!-- Password input -->
-            <div class="form-outline mb-4">
-              <input type="password" id="loginPassword" class="form-control" />
-              <label class="form-label" for="loginPassword">Password</label>
-            </div>
+          <!-- Password input -->
+          <div class="form-outline mb-4">
+            <input type="password" id="loginPassword" class="form-control" />
+            <label class="form-label" for="loginPassword">Password</label>
+          </div>
 
-            <!-- 2 column grid layout -->
-            <div class="row mb-4">
-              <div class="col-md-6 d-flex justify-content-center">
-                <!-- Checkbox -->
-                <div class="form-check mb-3 mb-md-0">
-                  <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
-                  <label class="form-check-label" for="loginCheck"> Remember me </label>
-                </div>
-              </div>
-
-              <div class="col-md-6 d-flex justify-content-center">
-                <!-- Simple link -->
-                <a href="#!">Forgot password?</a>
+          <!-- 2 column grid layout -->
+          <div class="row mb-4">
+            <div class="col-md-6 d-flex justify-content-center">
+              <!-- Checkbox -->
+              <div class="form-check mb-3 mb-md-0">
+                <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
+                <label class="form-check-label" for="loginCheck"> Remember me </label>
               </div>
             </div>
 
-            <!-- Submit button -->
-            <button type="submit" id="signIn" name="signIn" class="btn btn-primary btn-block mb-4">Sign in</button>
-
-            <!-- Sign Up buttons -->
-            <div class="text-center">
-              <p>Not a member? <a href="signup.html">Sign Up</a></p>
+            <div class="col-md-6 d-flex justify-content-center">
+              <!-- Simple link -->
+              <a href="#!">Forgot password?</a>
             </div>
-          </form>
+          </div>
+
+          <!-- Submit button -->
+          <button id="signIn" name="signIn" class="btn btn-primary btn-block mb-4">Sign in</button>
+
+          <!-- Sign Up buttons -->
+          <div class="text-center">
+            <p>Not a member? <a href="signup.html">Sign Up</a></p>
+          </div>
 
         </div>
 
