--- a/signup.html
+++ b/signup.html
@@ -66,6 +66,42 @@
 
   <main id="main">
 
+     <!-- ======= Criteria, Code of Conduct, and Expectations Section ======= -->
+     <section id="featured-services" class="featured-services section-bg">
+      <div class="container">
+
+        <div class="row no-gutters">
+          <div class="col-lg-4 col-md-6">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-laptop"></i></div>
+              <h4 class="title"><a href="">Criteria</a></h4>
+              <p class="description">To qualify as a mentor, you need to fluently speak and read Spanish or Portuguese (preferably you are of Hispanic origin). You will need to have expertise and experience in the U.S educational system, in the U.S. workplace or in both.</p>
+              <p class="description">To qualify as a mentee, you will ideally be of Hispanic origin. You should be a student, a future student or parent of a student.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-briefcase"></i></div>
+              <h4 class="title"><a href="">Code of Conduct</a></h4>
+              <p class="description">Treat others with respect. Do no harm.</p>
+              <p class="description">Communicate clearly and value other’s perspectives.</p>
+              <p class="description">Build strong relationships and collaborate.</p>
+              <p class="description">Remove barriers and inspire success.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+              <h4 class="title"><a href="">Expectations</a></h4>
+              <p class="description">As a mentor, you need to be able of building and maintaining rapport through trust, focus, empathy, congruence and empowerment, effective communication, as well as active listening and questioning, goal clarity and flexibility.</p>
+              <p class="description">As a mentee, you should actively seek the input from the mentor, demonstrate commitment through follow-up actions set in meetings, make time and attend meetings, and understand expectations and boundaries.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- Criteria, Code of Conduct, and Expectations Section -->
+
     <!-- ======= Sign Up Section ======= -->
     <section id="signup-signin" class="contact">
       <div class="container">
