Sign Up page:  I added the html elements for the 'Upload your picture' section.

--- a/public/signup.html
+++ b/public/signup.html
@@ -111,10 +111,29 @@
           <p>Create a new account.</p>
         </div>
 
+        <!-- ======= Upload your picture section ======= -->
+        <section id="team" class="team section-bg">
+          <div class="container">
+
+            <div class="row">
+              <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+                <div class="member">
+                  <img src="assets/img/portfolio/portfolio-7.jpg" alt="">
+                  <div class="col-lg-3 cta-btn-container text-center">
+                    <a class="cta-btn align-middle" href="signup.html">Upload your picture</a>
+                  </div>
+                </div>
+              </div>
+
+        </div>
+
+          </div>
+        </section><!-- End Upload your picture section -->
+
         <div class="row">
           <!--Reused 'Login-register' form from https://mdbootstrap.com/docs/standard/extended/login/# to create the sign-up / sign in form.-->
 
-            <!-- Name input -->
+          <!-- Name input -->
             <div class="form-outline mb-4">
               <input type="text" id="registerName" class="form-control" />
               <label class="form-label" for="registerName">Name</label>
