Community Members page - Added space between consecutive lists when listing members.

--- a/public/communitymembers.html
+++ b/public/communitymembers.html
@@ -169,6 +169,7 @@
       strVar += "    <img src=\"assets\/img\/team\/default-user.jpeg\" class=\"img-fluid\" alt=\"\">";
       strVar += "  <\/div>";
       strVar += "<\/div>";
+      strVar += "<div>&nbsp;</div>"
       return strVar;
     }
     
