Added 'Sign Out' hyperlink hidden in all pages. If users are sign in, they will see the Sign Out hyperlink, not the 'Sign In' hyperlink.

--- a/public/communitymembers.html
+++ b/public/communitymembers.html
@@ -55,7 +55,8 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="signin.html">Sign In</a></li>
+          <li><a class="getstarted scrollto" id="signInHyperlink" href="signin.html">Sign In</a></li>
+          <li><a class="getstarted scrollto" id="signOutHyperlink" style="display: none;">Sign Out</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -147,6 +148,7 @@
 
     // Initialize Firebase Authentication and get a reference to the service.
     const auth = getAuth(app);
+    const user = auth.currentUser;
 
     // Initialize Cloud Storage and get a reference to the service.
     const storage = getStorage(app);
@@ -157,6 +159,26 @@
     // List members when page loads.
     window.onload = addMembersToHtml();
 
+    // Hide 'Sign In' and show 'Sign Out' when page loads.
+    window.onload = onLoadPage();
+
+    function onLoadPage(){
+      if (user !== null) {
+        // Hide 'Sign In' and show 'Sign Out' hyperlink.
+        hideSignIn();
+        // Show Members.
+        addMembersToHtml();
+      } 
+      else{
+        alert("To see the members, you need to be a member yourself. Please, sign up or sign in.");
+      }
+    }
+
+    function hideSignIn() {
+      // Hide 'Sign In' hyperlink and show 'Sign Out' hyperlink
+      document.getElementById("signInHyperlink").style.display = "none";
+      document.getElementById("signOutHyperlink").style.display = "inline";
+    }
     
     // Start listing users from the beginning, 1000 at a time.
     //listAllUsers();
