--- a/public/contact.html
+++ b/public/contact.html
@@ -55,7 +55,8 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="signin.html">Sign In</a></li>
+          <li><a class="getstarted scrollto" id="signInHyperlink" href="signin.html">Sign In</a></li>
+          <li><a class="getstarted scrollto" id="signOutHyperlink" style="display: none;">Sign Out</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -151,6 +152,56 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+    import { getDatabase } from 'https://www.gstatic.com/firebasejs/9.14.0/firebase-database.js' 
+    import { getAuth } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
+
+    // const firebase = require("firebase");
+    // // Required for side-effects
+    // require("firebase/functions");
+
+    // TODO: Replace the following with your app's Firebase project configuration
+    // See: https://firebase.google.com/docs/web/learn-more#config-object
+
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+        apiKey: "AIzaSyBhqIalP3-K-gXgQNewWVQ5CVKDMRfsF-E",
+        authDomain: "hispanicswhocollege-e3c8b.firebaseapp.com",
+        databaseURL: "https://hispanicswhocollege-e3c8b-default-rtdb.firebaseio.com",
+        projectId: "hispanicswhocollege-e3c8b",
+        storageBucket: "hispanicswhocollege-e3c8b.appspot.com",
+        messagingSenderId: "179729519037",
+        appId: "1:179729519037:web:368abaf78714e3d929c2d4",
+        measurementId: "G-FK5L5DPBC2"
+      };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+
+    // Initialize Firebase Database and get a reference to the service.
+    const database = getDatabase(app);
+
+    // Initialize Firebase Authentication and get a reference to the service.
+    const auth = getAuth(app);
+    const user = auth.currentUser;
+
+    // Hide 'Sign In' and show 'Sign Out' when page loads.
+    window.onload = onLoadPage();
+
+    function onLoadPage(){
+      if (user !== null) {
+        hideSignIn();
+      }
+    }
+
+    function hideSignIn() {
+      // Hide 'Sign In' hyperlink and show 'Sign Out' hyperlink
+      document.getElementById("signInHyperlink").style.display = "none";
+      document.getElementById("signOutHyperlink").style.display = "inline";
+    }
+  </script>
 
 </body>
 
