--- a/public/signin.html
+++ b/public/signin.html
@@ -55,7 +55,8 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="signin.html">Sign In</a></li>
+          <li><a class="getstarted scrollto" id="signInHyperlink" href="signin.html">Sign In</a></li>
+          <li><a class="getstarted scrollto" id="signOutHyperlink" style="display: none;">Sign Out</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
