--- a/public/signup.html
+++ b/public/signup.html
@@ -55,8 +55,8 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="signin.html">Sign In</a></li>
-          <li><a class="getstarted scrollto" href="signin.html" style="display: none;">Sign Out</a></li>
+          <li><a class="getstarted scrollto" id="signInHyperlink" href="signin.html">Sign In</a></li>
+          <li><a class="getstarted scrollto" id="signOutHyperlink" style="display: none;">Sign Out</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -314,8 +314,6 @@
                 
                 // Redirect to the community members page.
                 window.location.href = "communitymembers.html";
-
-                // TODO: Hide 'Sign In' link and show 'Sign Out'
             })
             .catch((error) => {
                 const errorCode = error.code;
