Changed database from members to users because there is still nothing showing on Firebase Dataabase dashboard, eveb though I can get the user's info.

--- a/public/signup.html
+++ b/public/signup.html
@@ -296,7 +296,7 @@
                 const user = userCredential.user;
                 
                 // Save values in database.
-                set(ref(database, 'members/' + user.uid), {
+                set(ref(database, 'users/' + user.uid), {
                     name: name,
                     email: email,
                     username: username,
