Switched to 'members' to save the data of the users. I can see the memembers in the Firebase Database dashboard.

--- a/public/signin.html
+++ b/public/signin.html
@@ -190,7 +190,7 @@
                 const user = userCredential.user;
 
                 const dt = new Date();
-                update(ref(database, 'users/' + user.uid, {
+                update(ref(database, 'members/' + user.uid, {
                     last_login: dt,
                 }));
 
